# Sistema_FinanceiroSantanderCodrs

./: Investimentos.py  README.md  [Projeto Final] Proposta e Grupos.ipynb  __init__.py  agrupar_registro.py  atualizar_registro.py  cria_registro.py  cria_registro_despesa.py  cria_registro_receita.py  deletar_registro.py  encerrar_programa.py  exporta_relatorio.py  le_registro.py  main.py  mkdocs.yml  mostra_features.py  pyproject.toml  requirements.txt  utils.py
